--- a/1/1.html
+++ b/1/1.html
@@ -323,5 +323,23 @@ background-image: radial-gradient(#374566, #010203);
         .music {
             display: none;
         }
+        .message {
+            text-align: center;
+            color: rgb(253, 253, 148);
+        }
+        .party {
+            text-align: center;
+            color: green;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            margin-top: -15px;
+        }
     </style>
+    <div class="wisher">
+        <h3 class="message">Here is a wish for your birthday. May you receive whatever you ask for,<br>
+             may you find whatever you seek. Happy birthday.
+        </h3>
+        <h5 class="party">
+            ( party kab de rahe ho ? )
+        </h5>
+    </div>
 </body></html>
