--- a/1/index.html
+++ b/1/index.html
@@ -321,7 +321,7 @@ background-image: radial-gradient(#374566, #010203);
   </div>
     <style>
         .music {
-            display: none;
+            align-items: center;
         }
         .message {
             text-align: center;
