--- a/1/index.html
+++ b/1/index.html
@@ -314,7 +314,8 @@ background-image: radial-gradient(#374566, #010203);
         }
     </script>
   <div class="music">
-        <audio controls autoplay unmuted loop >
+        <audio controls autoplay unmuted loop>
+            <source src="music.ogg" type="audio/ogg">
             <source src="music.mp3" type="audio/mpeg">
           </audio>
         
