--- a/1/index.html
+++ b/1/index.html
@@ -289,7 +289,7 @@ background-image: radial-gradient(#374566, #010203);
     <link href="https://fonts.googleapis.com/css?family=Wendy+One" rel="stylesheet" type="text/css">
     <div class="container">
         <div class="balloon">
-            <div><span>🙌</span>
+            <div><span>🎂</span>
             </div>
             <div><span>B'</span>
             </div>
@@ -321,7 +321,7 @@ background-image: radial-gradient(#374566, #010203);
         }
         .party {
             text-align: center;
-            color: green;
+            color: rgb(0, 128, 17);
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             margin-top: 0px;
         }
@@ -344,8 +344,8 @@ background-image: radial-gradient(#374566, #010203);
         </h5>
     </div>
     <div class="timer">
-        <iframe src="timer.html"></iframe>
-        <iframe src="music.html"></iframe>
+        <iframe src="timer.html" ></iframe>
+        <iframe src="music.html" ></iframe>
     </div>
 
 </body></html>
