--- a/1/index.html
+++ b/1/index.html
@@ -340,12 +340,12 @@ background-image: radial-gradient(#374566, #010203);
              may you find whatever you seek. Happy birthday Sis.
         </h3>
         <h5 class="party">
-            ( party kab de rahi ho ? )
+             Bilkul Akdu, Khadoos, Ziddi Sister -> ( party kab de rahi ho ? )
         </h5>
     </div>
     <div class="timer">
-        <iframe src="timer.html" ></iframe>
-        <iframe src="music.html" ></iframe>
+        <div><iframe src="timer.html" ></iframe> 
+        <iframe src="music.html" ></iframe> 
     </div>
 
 </body></html>
