--- a/1/timer.html
+++ b/1/timer.html
@@ -46,8 +46,8 @@ var x = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML ="Today is Your Birthday, Enjoy..";
-  }
+    document.getElementById("demo").innerHTML ="Happy birthday! Enjoy your special day.";
+  } 
 }, 1000);
 </script>
 
