--- a/1/music.html
+++ b/1/music.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="music">
-        <audio controls autoplay unmuted loop>
+        <audio controls autoplay unmuted loop fadein>
             <source src="music.ogg" type="audio/ogg">
-            <source src="music.mp3" type="audio/mpeg">
+            <source src="music2 (mp3cut.net).mp3" type="audio/mpeg">
         </audio>   
   </div>
   <style>
