--- a/1/index.html
+++ b/1/index.html
@@ -344,8 +344,9 @@ background-image: radial-gradient(#374566, #010203);
         </h5>
     </div>
     <div class="timer">
-        <div><iframe src="timer.html" ></iframe> 
-        <iframe src="music.html" ></iframe> 
+        <div>
+        <iframe src="timer.html" height="240" ></iframe> 
+        <iframe src="music.html" height="240" ></iframe> 
     </div>
 
 </body></html>
