--- a/1/music.html
+++ b/1/music.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <div class="music">
-        <audio controls autoplay unmuted loop fadein>
-            <source src="music.ogg" type="audio/ogg">
-            <source src="music2 (mp3cut.net).mp3" type="audio/mpeg">
-        </audio>   
+        <video controls autoplay unmuted loop fadein width="280", height="200">
+            <source src="video.ogg" type="video/ogg">
+            <!-- <source src="music2 (mp3cut.net).mp3" type="audio/mpeg"> -->
+            <source src="video.mp4" type="video/mp4">
+        </video>   
   </div>
   <style>
-    .music {
+    /* .music {
         margin-top: 40px;
     }
-  </style>
+  </style> */
 </body>
 </html>
