--- a/1/index.html
+++ b/1/index.html
@@ -336,11 +336,11 @@ background-image: radial-gradient(#374566, #010203);
 
     </style>
     <div class="wisher">
-        <h3 class="message">Here is a wish for your birthday. May you receive whatever you ask for,<br>
-             may you find whatever you seek. Happy birthday Sis.
+        <h3 class="message"> Hey, just wanted to wish you the happiest of birthdays!<br>
+             may you find whatever you seek. 
         </h3>
         <h5 class="party">
-             Bilkul Akdu, Khadoos, Ziddi Sister -> ( party kab de rahi ho ? )
+              I hope your day is filled with love, laughter, and all the things that make you smile. If you're celebrating, count me in(:D)! Cheers to another amazing year ahead! 🎉🎂
         </h5>
     </div>
     <div class="timer">
